force-app/main/default/objects/ApplicationError__e/ApplicationError__e.object-meta.xml
<CustomObject>
    <description>Publish an ErrorLogging event immediately so that it survives a transaction rollback</description>
    <label>Application Error</label>
    <pluralLabel>Application Errors</pluralLabel>
</CustomObject>