force-app/main/default/objects/ApplicationError__e/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>Name of the application logging the error</description>
    <label>Application Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>