force-app/main/default/objects/ApplicationError__e/fields/Classname__c.field-meta.xml
<CustomField>
    <fullName>Classname__c</fullName>
    <description>Apex Classname where the error occurred</description>
    <label>Class Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>