force-app/main/default/objects/ApplicationError__e/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>should be one of:  Class, Trigger, AnonymousBlock, Flow</description>
    <label>Context</label>
    <length>60</length>
    <type>Text</type>
</CustomField>