force-app/main/default/objects/ApplicationError__e/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Technical Error Message</description>
    <label>Technical Error Message</label>
    <length>128</length>
    <type>Text</type>
</CustomField>