force-app/main/default/objects/ApplicationError__e/fields/MethodName__c.field-meta.xml
<CustomField>
    <fullName>MethodName__c</fullName>
    <description>Class Method Name or Flow Element name.</description>
    <label>Method Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>