force-app/main/default/objects/ApplicationError__e/fields/RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecordId__c</fullName>
    <description>18 Character RecordId of the record related to this specific error.  Text value, not a lookup</description>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>