force-app/main/default/objects/ApplicationError__e/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <defaultValue>&apos;Error&apos;</defaultValue>
    <description>Severity of the Error --&gt; Error, Warning, Info</description>
    <label>Severity</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>