force-app/main/default/objects/ApplicationError__e/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>Full StackTrace of the exception</description>
    <label>StackTrace</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>